# src/controllers/carouselSlidesController.ts
@@ -2,37 +2,58 @@ import { Request, Response, NextFunction } from 'express';
 import CarouselSlide from '../models/CarouselSlide';
 import errorHandler from '../utils/errorHandler';
 import APIError from '../utils/APIError';
-import { checkIfCarouselSlideExists,checkIfSlideOrderExists, checkIfSlideTitleExists,
+import { checkIfCarouselSlideExists,checkIfSlideOrderExists,
+  checkIfSlideTitleExists, caroselSlideResponseFormatter,
 } from '../services/carouselSlideService';
+import   checkIfBrandExists   from '../services/brandService';
+import   checkIfCategoryExists   from '../services/categoryService';
+
 
 const createNewCarouselSlide = errorHandler(
   async(req: Request, res: Response, next: NextFunction): Promise<void> => {
-    const { slideOrder, imageUrl, title, description } = req.body;
+    const { slideOrder, imageUrl, title, description, categoryName, brandName } = req.body;
 
     // Check if the slideOrder already exists
     const slideOrderExists = await checkIfSlideOrderExists(slideOrder);
+    const titleExists = await checkIfSlideTitleExists(title);
+    const category = await checkIfCategoryExists({ name: categoryName });
+    const brand = await checkIfBrandExists({ name: brandName });
+
     if (slideOrderExists) {
       return next(new APIError('Slide order already exists.', 400));
-    }
-
-    // Check if the title already exists
-    const titleExists = await checkIfSlideTitleExists(title);
-    if (titleExists) {
+    } else if (titleExists) {
       return next(new APIError('Title already exists.', 400));
+    } else if (!category) {
+      return next(new APIError('Category does not exist.', 400));
+    } else if (!brand) {
+      return next(new APIError('Brand does not exist.', 400));
     }
 
-    // Create the new carousel slide
-    const carouselSlide = await CarouselSlide.create({ slideOrder, imageUrl, title, description });
+    // Create a new carousel slide
+    const createNewCarouselSlide = await CarouselSlide.create({
+      title,
+      imageUrl,
+      slideOrder,
+      description,
+      categoryName,
+      brandName,
+      brandId: brand.id,
+      categoryId: category.id,
+    });
 
-    res.status(201).json({ status: 'success', carouselSlide });
+    const newCarouselSlide =
+    caroselSlideResponseFormatter(createNewCarouselSlide);
+
+    res.status(201).json({ status: 'success', newCarouselSlide });
   });
 
 const getAllCarouselSlides = errorHandler(
   async(req: Request, res: Response, next: NextFunction) => {
     const carouselSlides = await CarouselSlide.findAll();
+    const formattedSlides = carouselSlides.map(caroselSlideResponseFormatter);
     res.status(200).json({
       status: 'success',
-      carouselSlides: carouselSlides.length > 0 ? carouselSlides : 'No carousel slides found.',
+      carouselSlides: formattedSlides.length > 0 ? formattedSlides : 'No carousel slides found.',
     });
   },
 );
@@ -45,41 +66,37 @@ const getCarouselSlideById = errorHandler(
     if (!carouselSlide) {
       return next(new APIError('Carousel Slide not found.', 404));
     }
-
-    res.status(200).json({ status: 'success', carouselSlide });
+    const formattedSlide = caroselSlideResponseFormatter(carouselSlide);
+    res.status(200).json({ status: 'success', carouselSlide: formattedSlide });
   },
 );
 
 const updateCarouselSlideById = errorHandler(
   async(req: Request, res: Response, next: NextFunction) => {
     const { id } = req.params;
-    const { slideOrder, imageUrl, title, description } = req.body;
+    const { slideOrder, imageUrl, title, description , categoryName , brandName } = req.body;
 
     const carouselSlide = await checkIfCarouselSlideExists({ id });
+    const titleExists = await checkIfSlideTitleExists(title);
+    const slideOrderExists = await checkIfSlideOrderExists(slideOrder);
+    const category = await checkIfCategoryExists({ name: categoryName });
+    const brand = await checkIfBrandExists({ name: brandName });
+
     if (!carouselSlide) {
       return next(new APIError('Carousel Slide not found.', 404));
-    }
-
-    // Check if the slideOrder already exists
-    const slideOrderExists = await checkIfSlideOrderExists(slideOrder);
-    if (slideOrderExists) {
+    } else  if (slideOrderExists) {
       return next(new APIError('Slide order already exists.', 400));
-    }
-
-    // Check if the title already exists
-    const titleExists = await checkIfSlideTitleExists(title);
-    if (titleExists) {
+    } else if (titleExists) {
       return next(new APIError('Title already exists.', 400));
+    } else if (categoryName && !category) {
+      return next(new APIError('Category does not exist.', 400));
+    } else if (brandName && !brand) {
+      return next(new APIError('Brand does not exist.', 400));
     }
 
     // Update carousel slide with only the provided fields
-    const updatedFields = {
-      ...(slideOrder !== undefined && { slideOrder }),
-      ...(imageUrl && { imageUrl }),
-      ...(title && { title }),
-      ...(description && { description }) };
-    await carouselSlide.update(updatedFields);
-
+    await carouselSlide.update(req.body);
+    await carouselSlide.save();
     res.status(200).json({ status: 'success', carouselSlide });
   },
 );
